2009-09-22  Juanma Barranquero  <lekktu@gmail.com>

	* info.el (Info-try-follow-nearest-node): Use the URL extracted by
	`Info-get-token', instead of `browse-url-url-at-point'.  (Bug#4508)

2009-09-22  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el (calendar-mode-map): Make mouse-1 and 3 clicks on
	the scroll-bar scroll the calendar window rather than the buffer.

	* calendar/cal-menu.el (cal-menu-scroll-menu): Add a sub-section with
	commands that move point (as opposed to scrolling).

	* emulation/tpu-edt.el (tpu-copy-keyfile): Fix condition-case handler.

	* emacs-lisp/elint.el (elint): New custom group.
	(elint-log-buffer): Make it a defcustom.
	(elint-scan-preloaded, elint-ignored-warnings)
	(elint-directory-skip-re): New options.
	(elint-builtin-variables): Doc fix.
	(elint-preloaded-env): New variable.
	(elint-unknown-builtin-args): Add an entry for encode-time.
	(elint-extra-errors): Make it a variable rather than a constant.
	(elint-preloaded-skip-re): New constant.
	(elint-directory): Skip files matching elint-directory-skip-re.
	(elint-features): New variable, local to linted buffers.
	(elint-update-env): Initialize elint-features.  Possibly add
	elint-preloaded-env to the buffer's environment.
	(elint-get-top-forms): Bind elint-current-pos, for log messages.
	Skip quoted forms.
	(elint-init-form): New function, extracted from elint-init-env.
	Make non-list forms a warning rather than an error.
	Add the mode-map for define-derived-mode.  Handle define-minor-mode,
	easy-menu-define, put that adds an error-condition, and provide.
	When requiring cl, also require cl-macs.  Really require cl, to handle
	some cl macros.  Store required libraries in the list elint-features,
	so as not to re-load them.  Treat cc-require like require.
	(elint-init-env): Call elint-init-form to do the work.
	Handle eval-and-compile and such like.
	(elint-add-required-env): Do not clear messages.
	(elint-special-forms): Add handlers for function, defalias, if, when,